[project]
name = "streamlit-marimo-anywidget"
version = "0.1.0"
description = "Streamlit app integrating Marimo and Anywidget with UV package management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "marimo>=0.1.0",
    "anywidget>=0.9.0",
    "numpy>=1.24.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.2.0",
]

